--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My messager</string>
+    <string name="app_name">Stopwatch</string>
     <string name="enter_message">Enter a message</string>
-    <string name="send_message_button">Send message</string>
-    <string name="send_message_via_button">Send message via...</string>
-    <string name="select_message_button">Do select</string>
-    <string name="animal_crow">Crow</string>
-    <string name="animal_dog">Dog</string>
-    <string name="animal_cat">Cat</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="reset">Reset</string>
 </resources>
