--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
-    <string name="app_name">My Constraint Layout</string>
-    <string name="to_label">To:</string>
-    <string name="email_hint">Enter email address</string>
-    <string name="subject_hint">Subject</string>
-    <string name="send_button">Send</string>
-    <string name="message_hint">Message</string>
+    <string name="app_name">Starbuzz</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="starbuzz_logo">Starbuzz logo</string>
+    <string-array name="options">
+        <item>Drinks</item>
+        <item>Food</item>
+        <item>Stores</item>
+    </string-array>
+    <string name="title_activity_drink_category">DrinkCategoryActivity</string>
+    <string name="title_activity_drink">DrinkActivity</string>
 </resources>
